# rp2040-peripheral-demo

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  Rakefile  mruby_config.rb
mrblib/: app.rb  main.rb
src/: hal.c  main.c
